Fix vertical alignment

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -16,6 +16,7 @@
   display: inline-block;
   height: 32px;
   width: 32px;
+  align-self: center;
   position: relative;
   top: 5px;
 }
